--- a/src/app/products-grid/products-grid.component.html
+++ b/src/app/products-grid/products-grid.component.html
@@ -1,1 +1,7 @@
-<p>products-grid works!</p>
+<section class="py-5">
+  <div class="container px-4 px-lg-5 mt-5">
+    <div
+      class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"
+    ></div>
+  </div>
+</section>
