Update Product Card Html According to ProdcutDetails

--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -1,18 +1,14 @@
 <div class="col mb-5">
   <div class="card h-100">
     <!-- Product image-->
-    <img
-      class="card-img-top"
-      src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
-      alt="..."
-    />
+    <img class="card-img-top" src="{{ productDetails?.imageUrl }}" alt="..." />
     <!-- Product details-->
     <div class="card-body p-4">
       <div class="text-center">
         <!-- Product name-->
-        <h5 class="fw-bolder">Fancy Product</h5>
+        <h5 class="fw-bolder">{{ productDetails?.name }}</h5>
         <!-- Product price-->
-        $40.00 - $80.00
+        {{ productDetails?.unitPrice }}
       </div>
     </div>
     <!-- Product actions-->
