--- a/src/app/products-grid/products-grid.component.html
+++ b/src/app/products-grid/products-grid.component.html
@@ -3,7 +3,9 @@
     <div
       class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"
     >
-      <app-product-card></app-product-card>
+      <div *ngFor="let product of products">
+        <app-product-card [productDetails]="product"></app-product-card>
+      </div>
     </div>
   </div>
 </section>
